修改了欧付宝支付问题，已解决，
修改了欧付宝支付问题，已解决，

--- a/DDAYGO/ViewController/My/ScanningGun/Pay/ZP_PayHomePage/Cell/PayViewCell.xib
+++ b/DDAYGO/ViewController/My/ScanningGun/Pay/ZP_PayHomePage/Cell/PayViewCell.xib
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,29 +20,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="341.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="付款金额:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tHV-aM-oxI">
-                        <rect key="frame" x="33" y="151" width="61.5" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="付款金额:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tHV-aM-oxI">
+                        <rect key="frame" x="33" y="151" width="62" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入付款金额" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f8A-eo-dVF">
-                        <rect key="frame" x="96" y="176" width="191" height="25"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入付款金额" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f8A-eo-dVF">
+                        <rect key="frame" x="96" y="176" width="90" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="Vyi-g5-e0u"/>
+                        </constraints>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d6p-3Q-7I6">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d6p-3Q-7I6">
                         <rect key="frame" x="33" y="200" width="254" height="1"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.96167116119999996" green="0.86762083580000005" blue="0.097072327649999998" alpha="0.90938035100000003" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uBR-Qo-kme">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uBR-Qo-kme">
                         <rect key="frame" x="33" y="242" width="254" height="35"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.96167116119999996" green="0.86762083580000005" blue="0.097072327649999998" alpha="0.90938035100000003" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="4vl-gQ-UZw"/>
+                        </constraints>
                         <state key="normal" title="确定">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -53,32 +57,61 @@
                             <action selector="Determine:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="8xE-0e-MJS"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="向商家" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1BL-Tv-JPo">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="向商家" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1BL-Tv-JPo">
                         <rect key="frame" x="75" y="113" width="43" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="hhX-bm-sLD"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="“阿芙专卖店”" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhi-Jr-6eT">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="“阿芙专卖店”" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhi-Jr-6eT">
                         <rect key="frame" x="118" y="113" width="85" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.96167116116751272" green="0.86762083576528781" blue="0.097072327649224105" alpha="0.90938035102739723" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="付款" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nCy-Q9-Lu6">
-                        <rect key="frame" x="207" y="113" width="29" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="付款" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nCy-Q9-Lu6">
+                        <rect key="frame" x="203" y="113" width="29" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="img_payment_defaulthead" translatesAutoresizingMaskIntoConstraints="NO" id="ZsY-p0-Rvw">
-                        <rect key="frame" x="128" y="21" width="65" height="65"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_payment_defaulthead" translatesAutoresizingMaskIntoConstraints="NO" id="ZsY-p0-Rvw">
+                        <rect key="frame" x="128" y="22" width="65" height="65"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="65" id="7HZ-lq-4dV"/>
+                        </constraints>
                     </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="ZsY-p0-Rvw" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="3mx-Bq-pWw"/>
+                    <constraint firstItem="Jhi-Jr-6eT" firstAttribute="baseline" secondItem="nCy-Q9-Lu6" secondAttribute="baseline" id="FE2-Ue-Mrg"/>
+                    <constraint firstItem="uBR-Qo-kme" firstAttribute="top" secondItem="f8A-eo-dVF" secondAttribute="bottom" constant="41" id="HeS-KE-6m9"/>
+                    <constraint firstItem="tHV-aM-oxI" firstAttribute="leading" secondItem="d6p-3Q-7I6" secondAttribute="leading" id="NeM-E3-i7E"/>
+                    <constraint firstItem="d6p-3Q-7I6" firstAttribute="bottom" secondItem="f8A-eo-dVF" secondAttribute="bottom" id="PFc-8S-n0a"/>
+                    <constraint firstItem="1BL-Tv-JPo" firstAttribute="firstBaseline" secondItem="Jhi-Jr-6eT" secondAttribute="firstBaseline" id="Pfp-J6-9yX"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="ZsY-p0-Rvw" secondAttribute="trailing" constant="111" id="Pwy-SZ-avd"/>
+                    <constraint firstItem="ZsY-p0-Rvw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="11" id="Yf5-9B-2ZK"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="uBR-Qo-kme" secondAttribute="bottom" constant="54" id="Z5E-0x-Sfd"/>
+                    <constraint firstItem="f8A-eo-dVF" firstAttribute="top" secondItem="1BL-Tv-JPo" secondAttribute="bottom" constant="43" id="bUL-DL-WPR"/>
+                    <constraint firstItem="d6p-3Q-7I6" firstAttribute="top" secondItem="tHV-aM-oxI" secondAttribute="bottom" constant="32" id="d65-95-utW"/>
+                    <constraint firstItem="nCy-Q9-Lu6" firstAttribute="leading" secondItem="Jhi-Jr-6eT" secondAttribute="trailing" id="e8S-r5-rGr"/>
+                    <constraint firstItem="1BL-Tv-JPo" firstAttribute="baseline" secondItem="Jhi-Jr-6eT" secondAttribute="baseline" id="hdH-3j-ZCa"/>
+                    <constraint firstItem="Jhi-Jr-6eT" firstAttribute="centerX" secondItem="d6p-3Q-7I6" secondAttribute="centerX" id="i2w-pf-RfI"/>
+                    <constraint firstItem="f8A-eo-dVF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="80" id="jhV-Hz-3HZ"/>
+                    <constraint firstItem="d6p-3Q-7I6" firstAttribute="leading" secondItem="uBR-Qo-kme" secondAttribute="leading" id="kBl-OK-kia"/>
+                    <constraint firstItem="ZsY-p0-Rvw" firstAttribute="centerX" secondItem="Jhi-Jr-6eT" secondAttribute="centerX" id="lEf-vR-R0c"/>
+                    <constraint firstItem="d6p-3Q-7I6" firstAttribute="trailing" secondItem="uBR-Qo-kme" secondAttribute="trailing" id="li5-fe-CBr"/>
+                    <constraint firstItem="Jhi-Jr-6eT" firstAttribute="top" secondItem="ZsY-p0-Rvw" secondAttribute="bottom" constant="26" id="m38-FB-dAf"/>
+                    <constraint firstItem="Jhi-Jr-6eT" firstAttribute="leading" secondItem="1BL-Tv-JPo" secondAttribute="trailing" id="meX-yy-HKi"/>
+                    <constraint firstItem="tHV-aM-oxI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="17" id="pfd-wj-5WB"/>
+                    <constraint firstItem="tHV-aM-oxI" firstAttribute="top" secondItem="1BL-Tv-JPo" secondAttribute="bottom" constant="18" id="pru-Lp-idY"/>
+                    <constraint firstItem="Jhi-Jr-6eT" firstAttribute="firstBaseline" secondItem="nCy-Q9-Lu6" secondAttribute="firstBaseline" id="qDd-Lq-BSj"/>
+                    <constraint firstItem="ZsY-p0-Rvw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="112" id="rde-Wa-x7d"/>
+                    <constraint firstItem="ZsY-p0-Rvw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="11" id="zo3-eM-gLC"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="BusinessImage" destination="ZsY-p0-Rvw" id="de8-F3-kgc"/>
