--- a/DDAYGO/ViewController/My/MyHomePage/Base.lproj/MyViewController.xib
+++ b/DDAYGO/ViewController/My/MyHomePage/Base.lproj/MyViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,17 +19,16 @@
                 <outlet property="sdglView" destination="8nF-TL-hSY" id="5v8-3h-hhn"/>
                 <outlet property="userBackView" destination="LFs-vK-Df4" id="zsQ-47-JJe"/>
                 <outlet property="view" destination="iN0-l3-epB" id="5Mq-cd-wI5"/>
-                <outlet property="xfjlView" destination="GyI-WY-zTO" id="BKM-ny-2Uy"/>
                 <outlet property="zxxxView" destination="dI8-bY-gfZ" id="gGV-Fy-fbX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRP-HX-xQv">
-                    <rect key="frame" x="0.0" y="-20" width="375" height="832"/>
+                    <rect key="frame" x="0.0" y="-20" width="375" height="687"/>
                     <subviews>
                         <view contentMode="top" translatesAutoresizingMaskIntoConstraints="NO" id="ivX-Ep-Crm">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="260"/>
@@ -246,31 +245,6 @@
                                 <constraint firstItem="55u-GW-AOe" firstAttribute="leading" secondItem="8nF-TL-hSY" secondAttribute="leading" id="t5W-G9-15A"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GyI-WY-zTO">
-                            <rect key="frame" x="0.0" y="325" width="375" height="49"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zbi-kA-llp">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <inset key="contentEdgeInsets" minX="14" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                    <inset key="titleEdgeInsets" minX="4" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                    <state key="normal" title="申请开店" image="ic_mine_applystore">
-                                        <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="sskdAction:" destination="-1" eventType="touchUpInside" id="sl1-hG-OB6"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="zbi-kA-llp" firstAttribute="top" secondItem="GyI-WY-zTO" secondAttribute="top" id="975-ds-eOG"/>
-                                <constraint firstAttribute="height" constant="49" id="Ebp-mb-7qZ"/>
-                                <constraint firstItem="zbi-kA-llp" firstAttribute="leading" secondItem="GyI-WY-zTO" secondAttribute="leading" id="K8R-0e-7x7"/>
-                                <constraint firstAttribute="trailing" secondItem="zbi-kA-llp" secondAttribute="trailing" id="Oaz-nJ-NAr"/>
-                                <constraint firstAttribute="bottom" secondItem="zbi-kA-llp" secondAttribute="bottom" id="Txy-ci-oAG"/>
-                            </constraints>
-                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dI8-bY-gfZ">
                             <rect key="frame" x="0.0" y="382" width="375" height="49"/>
                             <subviews>
@@ -322,7 +296,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mDy-f9-02s">
-                            <rect key="frame" x="0.0" y="496" width="375" height="49"/>
+                            <rect key="frame" x="0.0" y="325" width="375" height="49"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yq7-mx-siu">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -349,26 +323,23 @@
                     </subviews>
                     <color key="backgroundColor" red="0.93323183059692383" green="0.9333917498588562" blue="0.93322181701660156" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="GyI-WY-zTO" firstAttribute="leading" secondItem="TRP-HX-xQv" secondAttribute="leading" id="4v2-tm-071"/>
                         <constraint firstAttribute="trailing" secondItem="dI8-bY-gfZ" secondAttribute="trailing" id="G9x-i4-wwG"/>
                         <constraint firstItem="mDy-f9-02s" firstAttribute="leading" secondItem="7k6-oe-5YX" secondAttribute="leading" id="HQy-EF-RsJ"/>
                         <constraint firstItem="ivX-Ep-Crm" firstAttribute="centerX" secondItem="TRP-HX-xQv" secondAttribute="centerX" id="Iei-vb-vg5"/>
                         <constraint firstItem="8nF-TL-hSY" firstAttribute="leading" secondItem="TRP-HX-xQv" secondAttribute="leading" id="NL8-ef-523"/>
                         <constraint firstAttribute="trailing" secondItem="8nF-TL-hSY" secondAttribute="trailing" id="PpE-6p-MiJ"/>
                         <constraint firstItem="8nF-TL-hSY" firstAttribute="top" secondItem="ivX-Ep-Crm" secondAttribute="bottom" constant="8" id="QGS-iB-oFK"/>
-                        <constraint firstItem="GyI-WY-zTO" firstAttribute="top" secondItem="8nF-TL-hSY" secondAttribute="bottom" constant="8" id="SfH-XM-ohb"/>
                         <constraint firstItem="dI8-bY-gfZ" firstAttribute="leading" secondItem="TRP-HX-xQv" secondAttribute="leading" id="UN3-9e-oip"/>
                         <constraint firstItem="mDy-f9-02s" firstAttribute="trailing" secondItem="7k6-oe-5YX" secondAttribute="trailing" id="WQG-7X-8yb"/>
                         <constraint firstAttribute="bottom" secondItem="ivX-Ep-Crm" secondAttribute="bottom" constant="407" id="a13-wQ-9fC"/>
-                        <constraint firstAttribute="trailing" secondItem="GyI-WY-zTO" secondAttribute="trailing" id="bIA-Qc-GKp"/>
                         <constraint firstItem="7k6-oe-5YX" firstAttribute="trailing" secondItem="dI8-bY-gfZ" secondAttribute="trailing" id="dIa-Bo-Q9E"/>
                         <constraint firstItem="ivX-Ep-Crm" firstAttribute="leading" secondItem="TRP-HX-xQv" secondAttribute="leading" id="g1I-nR-mGl"/>
-                        <constraint firstItem="dI8-bY-gfZ" firstAttribute="top" secondItem="GyI-WY-zTO" secondAttribute="bottom" constant="8" id="gex-x8-x7S"/>
-                        <constraint firstItem="mDy-f9-02s" firstAttribute="top" secondItem="7k6-oe-5YX" secondAttribute="bottom" constant="8" symbolic="YES" id="glh-sM-wxh"/>
+                        <constraint firstItem="mDy-f9-02s" firstAttribute="top" secondItem="7k6-oe-5YX" secondAttribute="bottom" constant="-163" id="glh-sM-wxh"/>
                         <constraint firstItem="ivX-Ep-Crm" firstAttribute="top" secondItem="TRP-HX-xQv" secondAttribute="top" id="hCY-QV-hyF"/>
                         <constraint firstItem="7k6-oe-5YX" firstAttribute="top" secondItem="dI8-bY-gfZ" secondAttribute="bottom" constant="8" symbolic="YES" id="kWA-UZ-XVz"/>
                         <constraint firstItem="7k6-oe-5YX" firstAttribute="leading" secondItem="dI8-bY-gfZ" secondAttribute="leading" id="nYj-kd-F41"/>
                         <constraint firstAttribute="trailing" secondItem="ivX-Ep-Crm" secondAttribute="trailing" id="oab-bR-bNS"/>
+                        <constraint firstItem="dI8-bY-gfZ" firstAttribute="top" secondItem="8nF-TL-hSY" secondAttribute="bottom" constant="65" id="p62-jm-OfC"/>
                     </constraints>
                 </scrollView>
             </subviews>
@@ -384,9 +355,8 @@
         </view>
     </objects>
     <resources>
-        <image name="ic_mine_applystore" width="22" height="22"/>
         <image name="ic_mine_news" width="20" height="20"/>
-        <image name="ic_mine_scanning" width="21" height="21"/>
+        <image name="ic_mine_scanning" width="22" height="22"/>
         <image name="ic_mine_set" width="20" height="20"/>
         <image name="ic_mine_store" width="20" height="20"/>
     </resources>
