--- a/DDAYGO/ViewController/My/Setting/BindingEmail/BindingEmailController.xib
+++ b/DDAYGO/ViewController/My/Setting/BindingEmail/BindingEmailController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BindingEmailController">
             <connections>
                 <outlet property="BinDing" destination="hTS-Jd-kvu" id="1Bh-Z5-d9r"/>
+                <outlet property="BindingEmailscrollView" destination="53e-o4-U5F" id="WQI-qC-i4F"/>
                 <outlet property="ZPCodeTextField" destination="RxJ-IJ-izv" id="V8c-VB-Die"/>
                 <outlet property="ZPEmailTextFiled" destination="HDt-RL-ZCR" id="Exl-am-cIH"/>
                 <outlet property="ZPPswTextField" destination="Twd-vG-oou" id="X5e-xM-col"/>
@@ -20,80 +21,94 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDt-RL-ZCR" customClass="TextView">
-                    <rect key="frame" x="20" y="74" width="335" height="35"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="53e-o4-U5F">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDt-RL-ZCR" customClass="TextView">
+                            <rect key="frame" x="20" y="40" width="280" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="35" id="ccz-mI-Yxy"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="输入邮箱"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="showBtn" value="YES"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="secureTextEntry" value="NO"/>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RxJ-IJ-izv" customClass="TextView">
+                            <rect key="frame" x="20" y="90" width="280" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="35" id="VQ9-Ml-I2O"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="输入验证码"/>
+                                <userDefinedRuntimeAttribute type="number" keyPath="keyboardType">
+                                    <integer key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Twd-vG-oou" customClass="TextView">
+                            <rect key="frame" x="20" y="140" width="280" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="35" id="7bP-ae-E1w"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="请输入密码"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="showBtn" value="YES"/>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="secureTextEntry" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTS-Jd-kvu">
+                            <rect key="frame" x="20" y="229" width="280" height="45"/>
+                            <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="AM9-Au-Sxy"/>
+                            </constraints>
+                            <state key="normal" title="绑定">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="BindingEmail:" destination="-1" eventType="touchUpInside" id="Xb3-WC-CJg"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="H5h-p3-3O6"/>
+                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="trailing" secondItem="RxJ-IJ-izv" secondAttribute="trailing" id="6u7-PH-Jiv"/>
+                        <constraint firstItem="RxJ-IJ-izv" firstAttribute="trailing" secondItem="Twd-vG-oou" secondAttribute="trailing" id="Cb2-Dd-dyF"/>
+                        <constraint firstItem="Twd-vG-oou" firstAttribute="trailing" secondItem="hTS-Jd-kvu" secondAttribute="trailing" id="FH2-22-Ebc"/>
+                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="top" secondItem="53e-o4-U5F" secondAttribute="top" constant="40" id="Hi2-fU-rL3"/>
+                        <constraint firstAttribute="trailing" secondItem="HDt-RL-ZCR" secondAttribute="trailing" constant="20" id="Kf6-BY-obe"/>
+                        <constraint firstAttribute="bottom" secondItem="hTS-Jd-kvu" secondAttribute="bottom" constant="294" id="MNq-46-7A2"/>
+                        <constraint firstItem="hTS-Jd-kvu" firstAttribute="top" secondItem="Twd-vG-oou" secondAttribute="bottom" constant="54" id="QVi-Kt-HVL"/>
+                        <constraint firstItem="Twd-vG-oou" firstAttribute="top" secondItem="RxJ-IJ-izv" secondAttribute="bottom" constant="15" id="RCh-ja-0cn"/>
+                        <constraint firstItem="RxJ-IJ-izv" firstAttribute="leading" secondItem="Twd-vG-oou" secondAttribute="leading" id="bgo-mp-7ls"/>
+                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="centerX" secondItem="53e-o4-U5F" secondAttribute="centerX" id="ce1-3y-DpS"/>
+                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="leading" secondItem="53e-o4-U5F" secondAttribute="leading" constant="20" id="hKx-Ft-3vu"/>
+                        <constraint firstItem="Twd-vG-oou" firstAttribute="leading" secondItem="hTS-Jd-kvu" secondAttribute="leading" id="mbA-LK-yuL"/>
+                        <constraint firstItem="RxJ-IJ-izv" firstAttribute="top" secondItem="HDt-RL-ZCR" secondAttribute="bottom" constant="15" id="qww-iV-Ndi"/>
+                        <constraint firstItem="HDt-RL-ZCR" firstAttribute="leading" secondItem="RxJ-IJ-izv" secondAttribute="leading" id="tuF-CL-hZK"/>
                     </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="输入邮箱"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="showBtn" value="YES"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="secureTextEntry" value="NO"/>
-                    </userDefinedRuntimeAttributes>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RxJ-IJ-izv" customClass="TextView">
-                    <rect key="frame" x="20" y="124" width="335" height="35"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="35" id="c64-HB-itz"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="输入验证码"/>
-                        <userDefinedRuntimeAttribute type="number" keyPath="keyboardType">
-                            <integer key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Twd-vG-oou" customClass="TextView">
-                    <rect key="frame" x="20" y="174" width="335" height="35"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="35" id="hK7-3T-xds"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="titleStr" value="请输入密码"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="showBtn" value="YES"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="secureTextEntry" value="YES"/>
-                    </userDefinedRuntimeAttributes>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTS-Jd-kvu">
-                    <rect key="frame" x="20" y="259" width="335" height="45"/>
-                    <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="H7v-dI-ctH"/>
-                    </constraints>
-                    <state key="normal" title="绑定">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="5"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="BindingEmail:" destination="-1" eventType="touchUpInside" id="Xb3-WC-CJg"/>
-                    </connections>
-                </button>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="HDt-RL-ZCR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="2dN-n0-ucg"/>
-                <constraint firstItem="RxJ-IJ-izv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="2nv-oh-Wse"/>
-                <constraint firstItem="Twd-vG-oou" firstAttribute="top" secondItem="RxJ-IJ-izv" secondAttribute="bottom" constant="15" id="8mB-5l-PbV"/>
-                <constraint firstItem="HDt-RL-ZCR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="74" id="9Dw-Aw-u41"/>
-                <constraint firstAttribute="trailing" secondItem="hTS-Jd-kvu" secondAttribute="trailing" constant="20" id="ACj-cA-iYU"/>
-                <constraint firstItem="Twd-vG-oou" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="Bxr-lV-YBX"/>
-                <constraint firstAttribute="trailing" secondItem="HDt-RL-ZCR" secondAttribute="trailing" constant="20" id="Pu4-6q-Udb"/>
-                <constraint firstItem="hTS-Jd-kvu" firstAttribute="top" secondItem="Twd-vG-oou" secondAttribute="bottom" constant="50" id="bPe-VX-voG"/>
-                <constraint firstAttribute="trailing" secondItem="RxJ-IJ-izv" secondAttribute="trailing" constant="20" id="gN2-p2-tAm"/>
-                <constraint firstItem="RxJ-IJ-izv" firstAttribute="top" secondItem="HDt-RL-ZCR" secondAttribute="bottom" constant="15" id="q6u-JO-sxB"/>
-                <constraint firstItem="hTS-Jd-kvu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="tI8-XK-Ksd"/>
-                <constraint firstAttribute="trailing" secondItem="Twd-vG-oou" secondAttribute="trailing" constant="20" id="vad-Wl-4Ed"/>
+                <constraint firstItem="53e-o4-U5F" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1Sf-4k-1zc"/>
+                <constraint firstItem="53e-o4-U5F" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="PSi-Ew-Ubu"/>
+                <constraint firstAttribute="trailing" secondItem="53e-o4-U5F" secondAttribute="trailing" id="dx4-am-6Sv"/>
+                <constraint firstAttribute="bottom" secondItem="53e-o4-U5F" secondAttribute="bottom" id="rtu-sz-dDa"/>
             </constraints>
+            <point key="canvasLocation" x="34" y="54"/>
         </view>
     </objects>
 </document>
