--- a/DDAYGO/ViewController/My/Setting/BindingIntroduce/BindingIntroduce.xib
+++ b/DDAYGO/ViewController/My/Setting/BindingIntroduce/BindingIntroduce.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,61 +13,77 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BindingIntroduce">
             <connections>
                 <outlet property="BindingIntroduceTextField" destination="h3n-zm-Vfg" id="jsk-CW-I5t"/>
+                <outlet property="BindingIntroducscrollView" destination="NAi-6J-0BE" id="Xxb-jf-bDe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="绑定介绍人" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3n-zm-Vfg">
-                    <rect key="frame" x="16" y="100" width="359" height="30"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAi-6J-0BE">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="绑定介绍人" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h3n-zm-Vfg">
+                            <rect key="frame" x="127" y="52" width="240" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="240" id="fhb-CD-vmH"/>
+                            </constraints>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rko-tf-gA9">
+                            <rect key="frame" x="16" y="81" width="359" height="1"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="0.85244541952054798" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="eYJ-ev-Fi4"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lqE-ha-3tL">
+                            <rect key="frame" x="16" y="157" width="343" height="35"/>
+                            <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="35" id="a8d-ZF-Yv6"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="绑定">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="BindingIntroduceTextField:" destination="-1" eventType="touchUpInside" id="Yqv-Ts-tdl"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="9P1-am-P0l"/>
+                        <constraint firstItem="h3n-zm-Vfg" firstAttribute="trailing" secondItem="NAi-6J-0BE" secondAttribute="trailingMargin" id="7uA-cC-TZs"/>
+                        <constraint firstItem="rko-tf-gA9" firstAttribute="leading" secondItem="NAi-6J-0BE" secondAttribute="leading" constant="16" id="Ita-OI-uI2"/>
+                        <constraint firstItem="h3n-zm-Vfg" firstAttribute="top" secondItem="NAi-6J-0BE" secondAttribute="top" constant="52" id="LFa-SY-3Ik"/>
+                        <constraint firstAttribute="trailing" secondItem="rko-tf-gA9" secondAttribute="trailing" id="M10-gL-Tjr"/>
+                        <constraint firstItem="lqE-ha-3tL" firstAttribute="top" secondItem="rko-tf-gA9" secondAttribute="bottom" constant="75" id="fzt-Xy-sif"/>
+                        <constraint firstAttribute="trailing" secondItem="lqE-ha-3tL" secondAttribute="trailing" constant="16" id="lqh-AK-8Be"/>
+                        <constraint firstItem="lqE-ha-3tL" firstAttribute="centerX" secondItem="NAi-6J-0BE" secondAttribute="centerX" id="o05-Fp-cUb"/>
+                        <constraint firstAttribute="bottom" secondItem="lqE-ha-3tL" secondAttribute="bottom" constant="376" id="pAP-l4-Asd"/>
+                        <constraint firstItem="rko-tf-gA9" firstAttribute="bottom" secondItem="h3n-zm-Vfg" secondAttribute="bottom" id="q7H-jk-M5S"/>
+                        <constraint firstItem="rko-tf-gA9" firstAttribute="top" secondItem="NAi-6J-0BE" secondAttribute="top" constant="81" id="w0f-W0-kM1"/>
+                        <constraint firstItem="rko-tf-gA9" firstAttribute="leading" secondItem="lqE-ha-3tL" secondAttribute="leading" id="xdS-m9-DQE"/>
                     </constraints>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rko-tf-gA9">
-                    <rect key="frame" x="16" y="129" width="359" height="1"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="0.85244541952054798" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lqE-ha-3tL">
-                    <rect key="frame" x="16" y="188" width="343" height="50"/>
-                    <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="bTS-xD-z3o"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <state key="normal" title="绑定">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="5"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="BindingIntroduceTextField:" destination="-1" eventType="touchUpInside" id="Yqv-Ts-tdl"/>
-                    </connections>
-                </button>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="rko-tf-gA9" firstAttribute="leading" secondItem="lqE-ha-3tL" secondAttribute="leading" id="AGF-Hj-db0"/>
-                <constraint firstAttribute="trailing" secondItem="h3n-zm-Vfg" secondAttribute="trailing" id="Btl-XV-Ma3"/>
-                <constraint firstItem="lqE-ha-3tL" firstAttribute="top" secondItem="rko-tf-gA9" secondAttribute="bottom" constant="58" id="DSe-0K-wLG"/>
-                <constraint firstItem="h3n-zm-Vfg" firstAttribute="trailing" secondItem="rko-tf-gA9" secondAttribute="trailing" id="Ekx-Is-vbj"/>
-                <constraint firstItem="lqE-ha-3tL" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="P4j-uC-pO1"/>
-                <constraint firstItem="h3n-zm-Vfg" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="b4c-yZ-PFX"/>
-                <constraint firstItem="rko-tf-gA9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="129" id="fg8-De-kp2"/>
-                <constraint firstItem="h3n-zm-Vfg" firstAttribute="leading" secondItem="rko-tf-gA9" secondAttribute="leading" id="kms-8g-ORo"/>
-                <constraint firstItem="h3n-zm-Vfg" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="rpG-N4-sjw"/>
-                <constraint firstItem="rko-tf-gA9" firstAttribute="bottom" secondItem="h3n-zm-Vfg" secondAttribute="bottom" id="uor-6c-dAe"/>
+                <constraint firstItem="NAi-6J-0BE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1hK-KH-uWY"/>
+                <constraint firstAttribute="bottom" secondItem="NAi-6J-0BE" secondAttribute="bottom" id="I6y-RD-eXy"/>
+                <constraint firstAttribute="trailing" secondItem="NAi-6J-0BE" secondAttribute="trailing" id="S7U-nV-GEV"/>
+                <constraint firstItem="NAi-6J-0BE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="khC-ws-7vP"/>
             </constraints>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <point key="canvasLocation" x="32.5" y="53"/>
         </view>
     </objects>
 </document>
